# DEMO_project-

./: README.md  main.py  pyproject.toml
backend/notebook/: Material_Recommendation_Report.md  agentflow.ipynb
backend/workflow/: agents.py  knowledgebase.py  material_feature.py  rag.py
backend/workflow/prompts/: prompts.json
frontend/static/css/: style.css
frontend/static/js/: main.js
frontend/templates/: index.html
